--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "homepage": "https://github.com/chengzhangtongxue/blog-node#readme",
     "devDependencies": {
         "cross-env": "^6.0.3"
+    },
+    "dependencies": {
+        "mysql": "^2.17.1"
     }
 }
